# EMSIPON

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
configurations/: entangled_allGaussian.data  rouse.data
doxygen/: Doxyfile  emsipon_header.tex  logfile.doc  references.bib
doxygen/pics/: msd_Rouse.eps  msd_gaussian_entangled.eps  sl_count.eps
src/: Auxiliary.cpp  b3D_integrator.cpp  distributions.cpp  domain.cpp  dump.cpp  grid.cpp  hopping.cpp  main.cpp  netmin.cpp  network.cpp  non_bonded_scheme_routines.cpp  rng.cpp
src/include/: Auxiliary.h  b3D_integrator.h  constants.h  distributions.h  domain.h  dump.h  grid.h  hopping.h  net_types.h  netmin.h  network.h  network.h~  non_bonded_scheme_routines.h  rng.h
